[tool.poetry]
name = "flights-crawler"
version = "0.1.0"
description = ""
authors = ["guilherme <guile.hm@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
